--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+} */
+/* @layer base {
+  html {
+    font-family: Proxima Nova, system-ui, sans-serif;
+  }
+} */
+/* body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+/* code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
+} */
